yew-functional-macro/tests/functional_macro/extern-fail.stderr
error: extern functions can't be functional components
  --> $DIR/extern-fail.rs:10:1
   |
10 | extern fn comp(props: &Props) -> Html {
   | ^^^^^^
